# prompt-shield-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  findings.rs  lib.rs  rule.rs  shield.rs
src/rules/: delimiter_smuggle.rs  encoded_payload.rs  format_break.rs  mod.rs  role_override.rs  secret_extract.rs  tool_call_inject.rs
tests/: corpus.rs  delimiter_smuggle.rs  encoded_payload.rs  findings.rs  format_break.rs  role_override.rs  secret_extract.rs  shield.rs  tool_call_inject.rs
