[package]
name = "prompt-shield"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pattern-based prompt-injection detection for LLM apps."
keywords = ["llm", "prompt", "injection", "ai", "security"]
categories = ["text-processing", "api-bindings"]
repository = "https://github.com/MukundaKatta/prompt-shield-rs"
readme = "README.md"

[dependencies]
regex = "1"
base64 = "0.22"
once_cell = "1"
